# EWSHM_Competition

./: .gitignore  AGENTS.md  DISCUSSION_SUMMARY.md  EVENT_GROUPING_FIX_SUMMARY.md  NN_INPUTS_TRAINING_IMPLEMENTATION.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: auto-merge-notebook-prs.yml  ci.yml  notebook-checks.yml
AQUINAS_DATASET/: README.md
aquinas_toolkit/: __init__.py  data_fetch.py  dataset_fetch.py  dataset_source.py
aquinas_toolkit/cli/: README.md  __init__.py  data.py  info.py  main.py  preprocess.py  run.py  terminal.py  viz.py
aquinas_toolkit/feature_extraction/: README.md  __init__.py  fdd.py  pipeline.py  store.py  workflow.py
aquinas_toolkit/io/: README.md  __init__.py  metadata.py  reader.py
aquinas_toolkit/models/: models.py  training_fncs.py
aquinas_toolkit/preprocessing/: README.md  __init__.py  alignment.py  core.py  duration.py  neural_inputs.py  organizer.py  pipeline.py  qc.py  quicklook.py  signals.py  store.py  zeroing.py
aquinas_toolkit/scoring/: README.md  __init__.py
aquinas_toolkit/training/: README.md  __init__.py  data_prep.py
aquinas_toolkit/utils/: README.md  __init__.py  dataset_config.py  dataset_paths.py  debug_logging.py  plotting.py  run_management.py
aquinas_toolkit/visualization/: README.md  __init__.py  exporter.py  layout.py
configs/: README.md  default.yaml  full_pipeline.yaml  new_deck_all_sets.yaml  old_deck_all_sets.yaml
docs/: README.md  preprocessing_neural_inputs_summary.md  preprocessing_qc_neural_inputs_summary.md  set1_old_preprocessing_neural_input_workflow.md
docs/notes/: preprocessing_neural_inputs_summary.md
notebooks/: 01_sensor_overview.ipynb  02_preprocessing.ipynb  02b_preprocessing_helpers.ipynb  03_feature_extraction.ipynb  04_anomaly_detection.ipynb  05_health_scoring.ipynb  README.md
notebooks/azrmirz_fncs/: architecture_1_v3.py  evaluate_architecture_1_v3.py  inference_cross_set_v3.py  inspect_outlier_event.py  (+2 more)
path/to/: file
scripts/: capture_viewer_gif.py  migrate_preprocess_waveforms.py  regen_viewer_artifacts.py
tests/: test_cli.py  test_cli_terminal.py  test_data_fetch.py  test_dataset_fetch.py  test_dataset_paths.py  test_feature_extraction.py  test_imports.py  test_info.py  test_preprocessing.py  test_quicklook.py  test_reader.py  test_run_management.py  test_training.py  test_visualization.py
(+17 files in other folders)
